# ai_playground_rag_cohere_connectors

./: .env-example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
api/: confluence.py  helpers.py  main.py  models.py  routes.py
